# aura-apraxia-aac

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  MODEL_CARD.md  README.md  ROADMAP.md  SECURITY.md  aura_streamlit_app.py  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  run_aura.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  metadata.json  metadata.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
adaptive_therapy/: README.md  reinforcement_learner.py
adaptive_therapy_logs/: speech_error_predictions.csv
docs/: EVALUATION_PROTOCOL.md  RESEARCH_NOTES.md  aura_architecture.mmd  aura_architecture.puml
docs/diagrams/: aura_sequence_current_speech.puml
error_classification/: README.md  __init__.py  adaptive_therapy_gui.py  adaptive_therapy_scheduler.py  error_classifier_model.py  log_predictions.py
evaluation/: evaluate_speech_recognition.py  metrics.py  sample_error_classification_results.csv  test_error_classifier.py  text_confusion_matrix.py
multimodal_aac/: README.md  gesture_config.json  gesture_log.csv  gesture_therapy_mode.py  gesture_to_speech.py
notebooks/: exploration.ipynb
speech_recognition/: README.md  wav2vec2_recognizer.py
tests/: test_config.py  test_imports.py
utils/: README.md  config.py  data_loader.py  preprocessing.py
